Fixed alignment Issue and commented feedback link

--- a/KnowledgeBase/Content/simple-sidebar.css
+++ b/KnowledgeBase/Content/simple-sidebar.css
@@ -32,8 +32,7 @@
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
     
-    overflow-x: hidden;
-    overflow-y:scroll;
+    overflow-x: hidden; 
 }
 
 #wrapper.toggled #sidebar-wrapper {
@@ -89,6 +88,7 @@
         font-size: 24px;
         line-height: 60px;
         color: white;
+        text-align:center;
     }
 
         .sidebar-nav > .sidebar-brand a {
